@startuml

abstract class AbstractPropFactory {
    # speedX: int
    # speedY: int
    + {abstract} createProp(int locationX, int locationY): AbstractProp
}

class BloodPropFactory extends AbstractPropFactory {
    + createProp(int locationX, int locationY): BloodProp
}

class BombPropFactory extends AbstractPropFactory {
    + createProp(int locationX, int locationY): BombProp
}

class BulletPropFactory extends AbstractPropFactory {
    + createProp(int locationX, int locationY): BulletProp
}

class RandomPropFactory extends AbstractPropFactory {
    + createProp(int locationX, int locationY): AbstractProp
}

RandomPropFactory --> BloodPropFactory
RandomPropFactory --> BombPropFactory
RandomPropFactory --> BulletPropFactory

BloodPropFactory ..> BloodProp
BombPropFactory ..> BombProp
BulletPropFactory ..> BulletProp
RandomPropFactory ..> AbstractProp

class EliteEnemy{}
EliteEnemy -> RandomPropFactory

@enduml